# lutz

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  PLANO_PR.md  README.es.md  README.md  README.pt-BR.md  lutz.spec  pyproject.toml
.claude/agents/: auditor-dev.md  corrige-seguranca.md  deploy-lutz.md  desenvolve-lutz.md  explora-vulnerabilidades.md  testa-lutz.md
.claude/agents/research/: analista-rag.md  auditor-pesquisa.md  curador.md  guardiao-privacidade.md  orquestrador-pesquisa.md  relator.md  revisor-critico.md  sentinela-pdf.md  vetorizador-seguro.md
.github/workflows/: build-binaries.yml  ci.yml  deploy-docs.yml  release.yml
docs/: agentic-chat-architecture.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/adr/: ADR-001-gate3-coverage-preexisting-deficit.md
docs/guide/: analytics.md  configuration.md  getting-started.md
docs/guide/interface/: analise.md  biblioteca.md  citacoes.md  configuracoes.md  historico.md  home.md  relatorios.md  resultados.md  vector-store.md  vetorizacao.md
installer/linux/: build-deb.sh  lutz.desktop
installer/windows/: launcher.py  lutz.iss
lutz/: __init__.py  cli.py
lutz/agent/: __init__.py  conversation.py  model_profiles.yaml  model_router.py  orchestrator.py  tools.py
lutz/agent/prompts/: goal_extractor.md  planner_system.md  tier_classifier.md
lutz/agents/: curador.md
lutz/analytics/: __init__.py  classification.py  clustering.py  distances.py  model_store.py  predict_udfs.py  reduction.py  registry.py  similarity.py  stats.py
lutz/commands/: __init__.py  agent.py  analysis.py  citations.py  dedup.py  experiments.py  init.py  load.py  model_cmd.py  query.py  rank.py  vector_store.py  vectorize.py  web.py
lutz/core/: __init__.py  audit.py  context_store.py  embedding_client.py  extraction.py  llm_client.py  pdf_processor.py  section_parser.py  security_checker.py  vector_store.py
lutz/security/: injection_patterns.yaml  pii_patterns.yaml  rag_poison_patterns.yaml
lutz/server/: app.py  db.py
lutz/ui/: Home.py  _style.py  _utils.py
lutz/ui/.streamlit/: config.toml
lutz/ui/pages/: 1_Vetorizacao.py  2_Vector_Store.py  3_Analise.py  4_Relatorios.py  5_Citacoes.py  6_Configuracoes.py
lutz/utils/: __init__.py  cluster_report.py  dedup.py  document_reader.py  html_report.py  kmeans_explore.py  pdf.py  project.py  ranking.py  templates.py
tests/: test_agent_db.py  test_agent_endpoints.py  test_agent_inline_prompt.py  test_agent_model_router.py  test_agent_orchestrator.py  test_agent_real_tools.py  test_agent_tools.py  test_app_catalog.py  test_app_pure_functions.py  test_chat_api_basics.py  test_chat_file_active.py  test_chat_memory.py  test_chat_reasoning_library.py  test_chat_reports.py  test_chat_streaming.py  test_cluster_report.py  test_core_units.py  test_db.py  test_dedup.py  test_embedding_and_vector_store.py  test_kmeans_explore.py  test_ranking.py  test_store_catalog.py
tests/analytics/: conftest.py  test_centroid_udf.py  test_clustering.py  test_distances.py  test_model_cmd.py  test_model_store.py  test_native_fallback.py  test_predict_udfs.py  test_registry.py  test_stats.py
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/analysis/execution_reports/: tmpce27us8g_20260521_154403.html  tmpce27us8g_20260521_154403.json  tmpos7ngyir_20260521_154541.html  tmpos7ngyir_20260521_154541.json  tmpos7ngyir_20260521_154541_citations_20260521_154711.html  tmpos7ngyir_20260521_154541_citations_20260521_154711.json  tmpos7ngyir_20260521_154541_roadmap_20260521_154619.html  tmpos7ngyir_20260521_154541_roadmap_20260521_154619.json
web/prompts/: evidence_quality.md  methodology_analysis.md  systematic_review.md  thematic_synthesis.md
web/src/: App.tsx  AppShell.tsx  i18n.ts  index.css  main.tsx
web/src/api/: client.ts
web/src/components/: ActiveJobPanel.tsx  Badge.tsx  CollapsibleSection.tsx  ConfirmDialog.tsx  HistoryDrawer.tsx  Layout.tsx  NotificationsPanel.tsx  SettingsModal.tsx  StreamLog.tsx  VectorStoreModal.tsx
web/src/contexts/: LanguageContext.tsx  NotificationsContext.tsx
web/src/hooks/: useTour.ts
web/src/pages/: AgentChat.css  AgentChat.tsx  Analysis.tsx  Analytics.tsx  Chat.css  Chat.tsx  Citations.tsx  Home.tsx  Process.tsx  Projects.tsx  Reports.tsx  Roadmap.tsx  Settings.tsx  VectorStore.tsx  VectorStoreCatalog.tsx  Vectorize.tsx
web/src/tabs/: BibliotecaTab.tsx  RelatoriosTab.tsx  ResultadosTab.tsx
