[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lutz-research"
version = "0.1.2"
description = "AI-powered academic article screening and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["research", "ai", "nlp", "pdf", "systematic-review", "screening"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "pypdf>=4.0",
    "lancedb>=0.8",
    "openai>=1.30",
    "anthropic>=0.28",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "gitpython>=3.1",
    "pyarrow>=15.0",
    "pdfplumber>=0.11",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.0",
    "tantivy>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
layout = [
    # Visual layout detection for section-aware chunking (--section-parse flag).
    # Also requires: poppler system library (apt install poppler-utils / brew install poppler)
    # Model weights (~250 MB) are downloaded automatically on first use.
    "layoutparser[layoutmodels]>=0.3.4",
    "pdf2image>=1.16",
]

[project.scripts]
lutz = "lutz.cli:cli"

[project.urls]
Repository = "https://github.com/jooguilhermesc/lutz"
Issues = "https://github.com/jooguilhermesc/lutz/issues"

[tool.hatch.build.targets.wheel]
packages = ["lutz"]

[tool.hatch.build.targets.wheel.sources]
"lutz/templates" = "lutz/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
