[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lutz-research"
version = "0.5.6"
description = "AI-powered academic article screening and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["research", "ai", "nlp", "pdf", "systematic-review", "screening"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "pypdf>=4.0",
    "lancedb>=0.8",
    "openai>=1.30",
    "anthropic>=0.28",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "python-dotenv>=1.2.2",
    "rich>=13.7",
    "gitpython>=3.1",
    "pyarrow>=15.0",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "torch>=2.0",
    "tantivy>=0.22",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.27",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "weasyprint>=60",
    "duckdb>=1.0",
    "sqlglot>=23.0",
    # Security: minimum versions to avoid known HIGH/CRITICAL CVEs
    "pillow>=12.2.0",
    "cryptography>=46.0.7",
    "lxml>=6.1.0",
    "aiohttp>=3.13.4",
    "certifi>=2024.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
layout = [
    # Visual layout detection for section-aware chunking (--section-parse flag).
    # Also requires: poppler system library (apt install poppler-utils / brew install poppler)
    # Model weights (~250 MB) are downloaded automatically on first use.
    # DEPRECATED: use --extraction marker instead (no Poppler required).
    "layoutparser[layoutmodels]>=0.3.4",
    "pdf2image>=1.16",
]
marker = [
    # OCR + multi-column layout detection via marker-pdf (surya-ocr backbone).
    # Handles scanned PDFs and IEEE/Elsevier/ACM two-column layouts without
    # requiring Poppler or Tesseract.  Model weights (~500 MB) are downloaded
    # lazily to ~/.cache/ on first use.
    # Activate with: lutz vectorize --extraction marker
    "marker-pdf>=0.2,<2.0",
]
security = [
    # google-re2: linear-time regex engine (C++ RE2 binding).
    # Eliminates catastrophic backtracking on adversarial PDF text.
    # Requires the libre2 system library:
    #   Linux:  sudo apt install libre2-dev
    #   macOS:  brew install re2
    # Falls back to stdlib re transparently when not installed.
    "google-re2>=1.1",
]

[project.scripts]
lutz = "lutz.cli:cli"

[project.urls]
Repository = "https://github.com/jooguilhermesc/lutz"
Issues = "https://github.com/jooguilhermesc/lutz/issues"

[tool.hatch.build.targets.sdist.force-include]
# Force-include the compiled React SPA in the sdist so it's present in the
# isolated temp directory when hatchling rebuilds the wheel from the sdist.
"web/dist" = "web/dist"

[tool.hatch.build.targets.wheel]
packages = ["lutz"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle the pre-built React SPA into the package.
# Build before releasing: cd web && npm run build
"web/dist" = "lutz/web"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
omit = [
    "lutz/commands/*",           # CLI entry-points (depend on subprocess/Click context)
    "lutz/utils/html_report.py", # HTML renderer (no testable business logic)
    "lutz/utils/templates.py",   # Jinja/static template helpers
    "lutz/utils/pdf.py",         # thin PDF open wrapper
    "lutz/utils/document_reader.py",  # multi-format file adapter (integration-level)
    "lutz/core/audit.py",        # append-only HMAC (tested by auditor-dev separately)
    "lutz/core/extraction.py",   # PDF extraction pipeline (integration-level)
    "lutz/core/pdf_processor.py", # PDF processor (integration-level)
    "lutz/core/section_parser.py", # section parser (integration-level)
    "lutz/__main__.py",          # entry-point Click
    "lutz/cli.py",               # entry-point Click
    "setup.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "except ImportError:",
]
fail_under = 50

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
